[package]
name = "mathml-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Deyan Ginev"]

[lib]
name = "mathml_tokens"
crate-type = ["lib","cdylib"]

[dependencies]
wasm-bindgen = "0.2"
quick-xml = "0.31.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]